[code] change proto and handler
